--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>MyMC</title>
+        <meta name="description" content="The official homepage of the arvacraft minecraft community.">
+        <meta name="author" content="SidTSN">
+        <title>ArvaCraft - Homepage</title>
         <!-- Bootstrap core CSS -->
         <link href="assets/css/bootstrap.css" rel="stylesheet">
 		<!-- MyMC CSS -->
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     </button>
                     <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-                    <a class="navbar-brand" href="index.html">MyMC</a>
+                    <a class="navbar-brand" href="index.html">ArvaCraft</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -44,8 +44,8 @@
         <div class="jumbotron homepage-opening">
             <div class="container">
                 <div class="row text-center">
-                    <h1 class="head">MyMC</h1>
-                    <h2 class="leader">play.playonmymc.com</h2>
+                    <h1 class="head">ArvaCraft</h1>
+                    <h2 class="leader">play.arvacraft.ga</h2>
                     <br />
                     <center><a class="btn btn-huge btn-info btn-glow" href="#">Play</a></center>
                 </div>
@@ -59,9 +59,9 @@
 							<img src="assets/img/swords.png" />
 						</div>
                         <h2>Fight against others</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget aliquet magna. Integer sed magna vitae nisl congue fermentum. Integer.
+                        <p>We have pvp, If you like pvp than our server is the place to be.
                             <br /><br />
-                            <a href="#" class="btn btn-info btn-round">Do it now &raquo;</a>
+                            <a href="#" class="btn btn-info btn-round">Join now &raquo;</a>
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -69,9 +69,9 @@
 							<img src="assets/img/chest.png" />
 						</div>
                         <h2>Collect stuff</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget aliquet magna. Integer sed magna vitae nisl congue fermentum. Integer.
+                        <p>Do you love those levels, well on our server you can gain mcmmo levels just by collecting.
                             <br /><br />
-                            <a href="#" class="btn btn-info btn-round">Do it now &raquo;</a>
+                            <a href="#" class="btn btn-info btn-round">Join now &raquo;</a>
                         </p>
                     </div>
                     <div class="col-md-4">
