--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 							<img src="assets/img/diamond.png" />
 						</div>
                         <h2>Become rich</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget aliquet magna. Integer sed magna vitae nisl congue fermentum. Integer.
+                        <p>are you the kind of person who believes one mans trash is another mans treasure, if you have said trash use our auction house and get lots of $$$.
                             <br /><br />
-                            <a href="#" class="btn btn-info btn-round">Do it now &raquo;</a>
+                            <a href="#" class="btn btn-info btn-round">Join now &raquo;</a>
                         </p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <ul class="nav nav-pills bottom">
 						  <li role="presentation"><a href="staff.html">Staff</a></li>
 						  <li role="presentation"><a href="rules.html">Rules</a></li>
-						  <li class="pull-right">&copy; 2015 MyMC</li>
+						  <li class="pull-right">&copy; 2018 SidTSN</li>
 						</ul>
 					</div>
                 </div>
