--- a/rules.html
+++ b/rules.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>MyMC</title>
+        <title>ArvaCraft - Rules</title>
         <!-- Bootstrap core CSS -->
         <link href="assets/css/bootstrap.css" rel="stylesheet">
 		<!-- MyMC CSS -->
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     </button>
                     <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-                    <a class="navbar-brand" href="index.html">MyMC</a>
+                    <a class="navbar-brand" href="index.html">ArvaCraft</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -40,28 +40,8 @@
             </div>
             <!-- /.container -->
         </nav>
-            <div class="container">
-			<h1 class="page-header">Rules</h1>
-					<ul>
-						<li>
-						Chat
-							<ul>
-								<li>No advertising.</li>
-								<li>No spamming.</li>
-								<li>No use of curse words.</li>
-							</ul>
-						</li>
-						<li>
-						World
-							<ul>
-								<li>No grieving.</li>
-								<li>No combat logging.</li>
-								<li>No use of nodus and other hacks.</li>
-							</ul>
-						</li>
-					</ul>
-			</div>
-			<!-- /.container -->
+	<h1 class="page-header">Rules</h1>
+	    <p>The rules can be found on our <a href="">Discord Server</a> or in the <a href="">Official Rulebook</a></p>
         <div class="container">
             <hr>
             <footer>
@@ -70,7 +50,7 @@
                         <ul class="nav nav-pills bottom">
 						  <li role="presentation"><a href="staff.html">Staff</a></li>
 						  <li role="presentation"><a href="rules.html">Rules</a></li>
-						  <li class="pull-right">&copy; 2015 MyMC</li>
+						  <li class="pull-right">&copy; 2018 SidTSN</li>
 						</ul>
 					</div>
                 </div>
