--- a/staff.html
+++ b/staff.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     </button>
                     <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-                    <a class="navbar-brand" href="index.html">MyMC</a>
+                    <a class="navbar-brand" href="index.html">ArvaCraft</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -41,15 +41,23 @@
             <!-- /.container -->
         </nav>
             <div class="container">
-			<h1 class="page-header">Staff</h1>
-					<div style="background: url(https://minotar.net/avatar/rodymol123/150);" class="staff-member">
+			<h1 class="page-header">Staff</h1>	
+                                        <div style="background: url(https://minotar.net/avatar/rodymol123/150);" class="staff-member">            
+						<div class="staff-name">              
+							<span>Jewel</span>              
+							<span>Founder</span>          
+						</div>                               
+		    			</div>
+		                        <div style="background: url(https://minotar.net/avatar/SidTSN/150);" class="staff-member">
 						<div class="staff-name">
-							<span>rodymol123</span>
+							<span>SidTSN</span>
+							<span>Founder/Owner</span>
 						</div>
 					</div>
 					<div style="background: url(https://minotar.net/avatar/rodymol123/150);" class="staff-member">
 						<div class="staff-name">
-							<span>rodymol123</span>
+							<span>Natorize</span>
+							<span>Co-Owner</span>
 						</div>
 					</div>
 			</div>
@@ -62,7 +70,7 @@
                         <ul class="nav nav-pills bottom">
 						  <li role="presentation"><a href="staff.html">Staff</a></li>
 						  <li role="presentation"><a href="rules.html">Rules</a></li>
-						  <li class="pull-right">&copy; 2015 MyMC</li>
+						  <li class="pull-right">&copy; 2018 SidTSN</li>
 						</ul>
 					</div>
                 </div>
