--- a/staff.html
+++ b/staff.html
@@ -44,10 +44,13 @@
 			<h1 class="page-header">Staff</h1>	
                                         <div style="background: url(https://minotar.net/avatar/rodymol123/150);" class="staff-member">            
 						<div class="staff-name">              
-							<span>Jewel</span>              
-							<span>Founder</span>          
-						</div>                               
-		    			</div>
+							<span>Jewel</span>      
+						</div>
+						<div class="staff-role">
+							<span>Founder</span>	
+
+						</div>	
+		                        </div>					
 		                        <div style="background: url(https://minotar.net/avatar/SidTSN/150);" class="staff-member">
 						<div class="staff-name">
 							<span>SidTSN</span>
