--- a/staff.html
+++ b/staff.html
@@ -48,20 +48,23 @@
 						</div>
 						<div class="staff-role">
 							<span>Founder</span>	
-
 						</div>	
 		                        </div>					
 		                        <div style="background: url(https://minotar.net/avatar/SidTSN/150);" class="staff-member">
 						<div class="staff-name">
 							<span>SidTSN</span>
-							<span>Founder/Owner</span>
+						</div>
+						<div class="staff-role">
+							<span>Founder/Owner</span>	
 						</div>
 					</div>
 					<div style="background: url(https://minotar.net/avatar/rodymol123/150);" class="staff-member">
 						<div class="staff-name">
 							<span>Natorize</span>
-							<span>Co-Owner</span>
 						</div>
+						<div class="staff-role">
+							<span>Co-Owner</span>	
+						</div>	
 					</div>
 			</div>
 			<!-- /.container -->
