--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h1 class="head">ArvaCraft</h1>
                     <h2 class="leader">play.arvacraft.ga</h2>
                     <br />
-                    <center><a class="btn btn-huge btn-info btn-glow" href="#">Play</a></center>
+                    <center><button onclick="myFunction()" class="btn btn-huge btn-info btn-glow">Play</button></center>
                 </div>
             </div>
         </div>
