--- a/index.html
+++ b/index.html
@@ -105,5 +105,11 @@
         <!-- JavaScript -->
         <script src="assets/js/jquery-1.10.2.js"></script>
         <script src="assets/js/bootstrap.js"></script>
+	<script>
+	function myFunction() {
+    	    alert("IP: play.arvacraft.ga");
+	    alert("MC Version: Latest");
+	}
+	</script>
     </body>
 </html>
