--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="row text-center">
                     <h1 class="head">ArvaCraft</h1>
-                    <h2 class="leader">play.arvacraft.ga</h2>
+                    <h2 class="leader">The ultimate minecraft community</h2>
                     <br />
                     <center><button onclick="myFunction()" class="btn btn-huge btn-info btn-glow">Play</button></center>
                 </div>
