--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h2>Fight against others</h2>
                         <p>We have pvp, If you like pvp than our server is the place to be.
                             <br /><br />
-                            <a href="#" class="btn btn-info btn-round">Join now &raquo;</a>
+                            <button onclick="myFunction()" class="btn btn-info btn-round">Join now &raquo;</button>
                         </p>
                     </div>
                     <div class="col-md-4">
